<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/overview"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <Button
        android:id="@+id/buttonA"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview"></Button>

    <Button
        android:id="@+id/buttonB"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/B"
        app:layout_constraintStart_toEndOf="@+id/buttonA"
        app:layout_constraintTop_toBottomOf="@+id/overview"></Button>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toBottomOf="@+id/overview"></Button>

    <Button
        android:id="@+id/buttonD"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonA"></Button>

    <Button
        android:id="@+id/buttonE"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/E"
        app:layout_constraintStart_toEndOf="@+id/buttonD"
        app:layout_constraintTop_toBottomOf="@+id/buttonB"></Button>

    <Button
        android:id="@+id/buttonF"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/buttonE"
        app:layout_constraintTop_toBottomOf="@+id/buttonC"></Button>

    <Button
        android:id="@+id/buttonG"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/G"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonD"></Button>

    <Button
        android:id="@+id/buttonH"
        android:layout_width="84dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/H"
        app:layout_constraintStart_toEndOf="@+id/buttonG"
        app:layout_constraintTop_toBottomOf="@+id/buttonE"></Button>

    <Button
        android:id="@+id/buttonI"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="@string/I"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/buttonH"
        app:layout_constraintTop_toBottomOf="@+id/buttonF"></Button>

    <Button
        android:id="@+id/buttonJ"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/J"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonG"></Button>

    <Button
        android:id="@+id/buttonK"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/K"
        app:layout_constraintStart_toEndOf="@+id/buttonJ"
        app:layout_constraintTop_toBottomOf="@+id/buttonH"></Button>

    <Button
        android:id="@+id/buttonL"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/L"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/buttonK"
        app:layout_constraintTop_toBottomOf="@+id/buttonI"></Button>

    <Button
        android:id="@+id/buttonM"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/M"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJ"></Button>

    <Button
        android:id="@+id/buttonN"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/N"
        app:layout_constraintStart_toEndOf="@+id/buttonM"
        app:layout_constraintTop_toBottomOf="@+id/buttonK"></Button>

    <Button
        android:id="@+id/buttonO"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/O"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toEndOf="@+id/buttonN"
        app:layout_constraintTop_toBottomOf="@+id/buttonL"></Button>

    <Button
        android:id="@+id/buttonP"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/P"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonM"></Button>

    <Button
        android:id="@+id/buttonQ"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/Q"
        app:layout_constraintStart_toEndOf="@+id/buttonP"
        app:layout_constraintTop_toBottomOf="@+id/buttonN"></Button>

    <Button
        android:id="@+id/buttonR"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/R"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/buttonQ"
        app:layout_constraintTop_toBottomOf="@+id/buttonO"></Button>

    <Button
        android:id="@+id/buttonS"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/S"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonP"></Button>

    <Button
        android:id="@+id/buttonT"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/T"
        app:layout_constraintStart_toEndOf="@+id/buttonS"
        app:layout_constraintTop_toBottomOf="@+id/buttonQ"></Button>

    <Button
        android:id="@+id/buttonU"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/U"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toEndOf="@+id/buttonT"
        app:layout_constraintTop_toBottomOf="@+id/buttonR"></Button>

    <Button
        android:id="@+id/buttonV"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/V"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/buttonZ"
        app:layout_constraintTop_toBottomOf="@+id/buttonX"></Button>

    <Button
        android:id="@+id/buttonW"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/W"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonS"></Button>

    <Button
        android:id="@+id/buttonX"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/X"
        app:layout_constraintStart_toEndOf="@+id/buttonW"
        app:layout_constraintTop_toBottomOf="@+id/buttonT"></Button>

    <Button
        android:id="@+id/buttonY"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/Y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/buttonX"
        app:layout_constraintTop_toBottomOf="@+id/buttonU"></Button>

    <Button
        android:id="@+id/buttonZ"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/Z"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonW"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>