<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="304dp"
        android:layout_height="397dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.061"
        app:srcCompat="@drawable/ic_launcher_background" />


    <Button
        android:id="@+id/firstPageButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/firstPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/nextPageButton"
        android:layout_width="134dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        app:layout_constraintStart_toEndOf="@+id/firstPageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/overviewButton"
        android:layout_width="134dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="@+id/nextPageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nextPageButton"
        app:layout_constraintTop_toBottomOf="@+id/nextPageButton" />

    <Button
        android:id="@+id/lastPageButton"
        android:layout_width="139dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nextPageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="409dp"
        android:layout_height="116dp"
        android:layout_marginTop="4dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/previousPageButton"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="216dp"
            android:layout_marginBottom="59dp"
            android:text="@string/previous" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>